test/analyze/type_check/assignment/operators.exp
Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:17:2
 17 |   x += 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:18:2
 18 |   x -= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:19:2
 19 |   x *= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:20:2
 20 |   x /= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:21:2
 21 |   x %= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:22:2
 22 |   x &= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:23:2
 23 |   x |= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:24:2
 24 |   x ^= 1;
    |   ^

Error: Expected type `Long` but found `Bool`
test/analyze/type_check/assignment/operators.myte:28:7-11
 28 |   x += true;
    |        ^^^^

Error: Expected type `Byte` but found `Int`
test/analyze/type_check/assignment/operators.myte:36:7-15
 36 |   x += (1: Int);
    |        ^^^^^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:48:2
 48 |   x <<= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:49:2
 49 |   x >>= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:50:2
 50 |   x >>>= 1;
    |   ^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:54:8-12
 54 |   x <<= true;
    |         ^^^^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/assignment/operators.myte:72:11-20
 72 |   x.foo += (1: Byte);
    |            ^^^^^^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/assignment/operators.myte:73:11-13
 73 |   x.foo += "";
    |            ^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/assignment/operators.myte:74:2-7
 74 |   x.bar += 1;
    |   ^^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/assignment/operators.myte:75:10-12
 75 |   y[0] += "";
    |           ^^

Error: Expected type `Int` but found `Option<Int>`
test/analyze/type_check/assignment/operators.myte:76:2-7
 76 |   z[""] += 1;
    |   ^^^^^